--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<img class="arrow arrow_left" src="../Print-it-JS-main/assets/images/arrow_left.png" alt="arrow_left">
-		<img class="arrow arrow_right" src="../Print-it-JS-main/assets/images/arrow_right.png" alt="arrow_right">
+		<img class="arrow arrow_left" src="assets/images/arrow_left.png" alt="arrow_left">
+		<img class="arrow arrow_right" src="assets/images/arrow_right.png" alt="arrow_right">
 		<div class="dots">
 		</div>
 	</div>
