"fix errors after mentoring"

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		<img class="arrow arrow_left" src="assets/images/arrow_left.png" alt="arrow_left">
 		<img class="arrow arrow_right" src="assets/images/arrow_right.png" alt="arrow_right">
 		<div class="dots">
-			<div class="dot dot_selected"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
+			<span class="dot dot_selected"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
 		</div>
 	</div>
 	<section id="about-us" class="container">
